--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,10 @@ h1{
     padding: 30px 20px;
 }
 
+.noMostrar, .ocultarInterfaz{
+    visibility: hidden;
+}
+
 #comprar{
     background-color: #f5a496;
 }
